--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,8 @@ body {
     background: var(--secondary-color);
     display: grid;
     place-items: center;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     font-family: 'Comfortaa';
 }
 
@@ -46,11 +46,12 @@ h1 {
 }
 
 nav {
-    width: 100%;
+    width: auto;
 }
 
 nav ul {
     width: max-content;
+    max-width: 100%;
     margin: 0 auto;
     background-color: var(--secondary-color-fade);
     padding: 10px 0px;
@@ -184,16 +185,17 @@ nav ul li.active {
     position: absolute;
     width: 100vw;
     height: 100vh;
-    z-index: 99999;
     left: 0;
-    bottom: -150vh;
-    transition: 300ms;
-    display: none;
+    top: 0;
+    transition: bottom 300ms, transform 500ms;
+    opacity: 0;
+    z-index: -1;
 }
 
 .modal.show {
-    bottom: 0;
-    display: block;
+    transform: scale(1);
+    opacity: 1;
+    z-index: 99999;
 }
 
 .modal .modal-backdrop {
@@ -207,7 +209,7 @@ nav ul li.active {
     transition: 600ms;
 }
 
-.modal .modal-backdrop:hover{
+.modal .modal-backdrop:hover {
     cursor: pointer;
 }
 
@@ -230,6 +232,14 @@ nav ul li.active {
     padding: 25px;
     border-radius: 25px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    transform: scale(1.1);
+    transition: 300ms;
+    opacity: 0;
+}
+
+.modal.show .modal-content{
+    transform: scale(1);
+    opacity: 1;
 }
 
 .modal .modal-content .modal-title {
@@ -241,7 +251,7 @@ nav ul li.active {
     margin: 0;
 }
 
-.modal .modal-content .modal-body h2{
+.modal .modal-content .modal-body h2 {
     color: var(--text-color);
     font-size: 18px;
     margin-bottom: 15px;
@@ -301,4 +311,64 @@ nav ul li.active {
 
 .colors .color-item .color-block.primary {
     margin-right: 10px;
+}
+
+@media (max-width: 1024px) {
+
+    :root {
+        --circle-size: 300px;
+        --dashed: 710;
+        --circle: 45%;
+    }
+
+    nav ul {
+        padding: 5px;
+    }
+
+    nav ul li {
+        padding: 10px 10px;
+        margin: 5px;
+    }
+
+    #timer-container {
+        margin: 15px;
+        padding: 5px;
+    }
+
+    #timer-counter {
+        font-size: 50px;
+        margin-top: 40px;
+        margin-bottom: 15px
+    }
+
+    #timer-controller {
+        font-size: 15px;
+    }
+
+    #timer-progress svg circle {
+        stroke-width: 15px;
+    }
+
+
+
+    .modal .modal-content {
+        max-width: calc(90% - 30px);
+        padding: 15px;
+        top: 5%;
+    }
+
+    .colors {
+        gap: 15px;
+        justify-content: center;
+        margin-top: 5px;
+    }
+
+    .input-group {
+        margin-bottom: 15px;
+    }
+
+    .timers {
+        margin-bottom: 15px;
+    }
+
 }
